# ai-product-recommendation-chatbot

./: .gitignore  GEMINI_MIGRATION_ANALYSIS.md  LANGCHAIN_IMPLEMENTATION.md  LANGGRAPH_IMPLEMENTATION.md  LANGGRAPH_PRODUCTION_READINESS.md  LANGSMITH_GUIDE.md  LangChain_to_LangGraph_Migration_Plan.md  PROJECT_PLAN.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP_LOCAL_OLLAMA.md  docker-compose.yml  package-lock.json
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  middleware.py  routes.py
backend/app/database/: __init__.py  mongodb.py  pinecone_db.py
backend/app/graph/: __init__.py  builder.py  nodes.py  state.py
backend/app/models/: __init__.py  order.py  product.py  request.py  state.py  user.py
backend/app/services/: __init__.py  chatbot_service.py  data_loader.py  email_service.py  tavily_service.py  user_service.py
backend/app/tools/: __init__.py  email_tool.py  purchase_history_tool.py  purchase_tool.py  search_tool.py  user_info_tool.py  web_search_tool.py
backend/app/utils/: __init__.py  helpers.py  logger.py
backend/data/: categories.json
backend/data/products/: README.md  electronics.json  headphones.json  home_office.json  laptops.json  monitors.json  televisions.json  wearable.json
backend/data/purchase_history/: purchase_history_user_001.json  purchase_history_user_002.json  purchase_history_user_003.json
backend/scripts/: init_db.py  load_products.py  load_purchase_history.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: index.css
frontend/src/components/: ChatInterface.jsx  InputBox.jsx  MessageList.jsx  ProductCard.jsx  PurchaseHistoryList.jsx  UserInfoCard.jsx
frontend/src/hooks/: useChat.js
frontend/src/services/: api.js
