[project]
name = "product-recommendation-chatbot"
version = "1.0.0"
description = "AI-powered product recommendation chatbot with RAG"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.6",
    "langchain>=1.2.3",
    "langchain-core>=0.3.0,<0.4.0",
    "langchain-community>=0.3.0,<0.4.0",
    "langchain-pinecone>=0.2.0",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.6",
    "langsmith>=0.6.2",
    "pinecone-client>=3.0.0",
    "pymongo>=4.6.0",
    "motor>=3.7.1",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "tavily-python>=0.3.0",
    "ollama>=0.1.0",
    "tenacity>=8.2.3",
    "python-json-logger>=2.0.7",
    "pydantic[email]>=2.0.0",
    "lark>=1.3.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=25.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
