[project]
name = "product-recommendation-chatbot"
version = "1.0.0"
description = "AI-powered product recommendation chatbot with RAG"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "python-multipart>=0.0.20",
    "langchain>=1.2.3",
    "langchain-core>=1.2.11",           # CVE-2025-68664 (CRITICAL), CVE-2026-26013 (LOW) — min 1.2.11
    "langchain-classic>=1.0.1",
    "langgraph>=1.0.9",
    "langchain-community>=0.3.27",      # CVE-2025-6984 (HIGH, XXE) — min 0.3.27
    "langchain-pinecone>=0.2.13",
    "langchain-google-genai==4.2.1",
    "langsmith>=0.6.3",                 # CVE-2026-25528 (MEDIUM, SSRF) — min 0.6.3
    "pinecone-client>=3.0.0",
    "pinecone-text>=0.9.0",
    "pymongo>=4.6.3",                   # CVE-2024-5629 (MEDIUM, OOB read) — min 4.6.3
    "motor>=3.7.1",
    "python-dotenv>=1.1.0",
    "httpx>=0.28.1",
    "langchain-tavily>=0.2.16",
    "tenacity>=9.1.2",
    "python-json-logger>=3.3.0",
    "pydantic[email]>=2.11.3",
    "lark>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=25.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
